<resources>
    <string name="app_name">U2P1C3 - Tip Calculator Logic</string>
    <string name="service_cost">Service Cost</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_10">Good (10%)</string>
    <string name="okay_5">Okay (5%)</string>
    <string name="round_up_tip">Round up tip ?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount : %s</string>
</resources>